  David Hawes!)
- Graphics: Implemented GCOL action codes 5-7
- Graphics: Hopefully fixed a triangle drawing bug.
- Graphics: Implement VDU23,16 (as far as already implemented) in VDU5 mode
- BASIC: Fix COLOUR(r,g,b) function to return correct values in 256-colour
  modes.
- BASIC: Fix behaviour of RND followed by a space before parentheses to match
  ARM and 6502 BBC BASIC.

* V1.22.11 - 11 July 2021
- System: Mouse position wasn't taking into account change of ORIGIN.
- System: Changes to dlopen, otherwise symbols weren't being recognised.
- System: SYS "Brandy_dlgetaddr" optionally takes a second parameter of a
  library handle returned by SYS "Brandy_dlopen".
- System: SYS now only operates in 64-bit mode on 64-bit hardware.
- System: Fixed a bug where the keyboard would stop responding after a while
  in full-screen mode.
- System: Bug fix on new-style MODE call where MODEs 3, 6 and 7 could be
  matched.  It now only matches existing graphics-capable modes, and will
  construct one (effectively doing *NewMode 126 x y bpp 1 1) if no matches
  to existing modes are found.
- System: Emulated syscall OS_ReadModeVariable was incorrectly also returning
  VDU variables. Now only Mode variables are returned, attempts to get any
  other variable return 0, as they do on RISC OS.
- System: Implemented OSWORDs 11 and 12, and SYS "OS_ReadPalette"
- System: Implemented VDU flags 148-152, so 0-12 and 128-161 are now supported.
- System: Reading VDU variables for TINT was giving incorrect values.
- System: VDU20 wasn't updating the display (unlike VDU19), fixed.
- BASIC: Fixed a bug whereby the OSCLI command might have its parameter
  trampled on.
- BASIC: On non-RISC OS platforms, increase SYS parameters to 16 to support
  "Brandy_dlcall" calling symbols which take a lot of parameters.
- BASIC: Power was broken in the upper echelons of 64-bit ints, also conversion
  to ints was a bit broken for edge cases.