@@ -202,7 +202,7 @@ static void init1(void) {
   matrixflags.failovermode = 255;	/* Report Bad Mode on unavailable screen mode */
   matrixflags.int_uses_float = 0;	/* Does INT() use floats? Default no = RISC OS and BBC behaviour */
   matrixflags.legacyintmaths = 0;	/* Enable legacy integer maths? Default no = BASIC VI behaviour */
-  matrixflags.cascadeiftweak = 0; /* Handle cascaded IFs BBCSDL-style? Default no = ARM BBC BASIC behaviour */
+  matrixflags.cascadeiftweak = 1; /* Handle cascaded IFs BBCSDL-style? Default no = ARM BBC BASIC behaviour */
   matrixflags.hex64 = 0;		/* Decode hex as 64-bit? Default no = BASIC VI behaviour */
   matrixflags.bitshift64 = 0;		/* Bit shifts operate in 64-bit space? Default no = BASIC VI behaviour */
   matrixflags.pseudovarsunsigned = 0;	/* Are memory pseudovariables unsigned on 32-bit? */
